/* vi:set ts=4: */

v1.30
	* Removed stdint.h dependency
	* Improved WIRETAP to do more logging
	* Added "pinger.sh" shell script example for using i2p-ping
	* Added SAM_BAD_STYLE error
	* Added exit values for i2p-ping from xolo

v1.25	2004-07-31
	* Created I2P-Ping, a new example program (it's a clone of I2Ping).  Works
		on Posix only, because it uses getopt().
	* Removed the old broken examples and added more comments to
		warhammer-dgram.c
	* Added support for sessions - now LibSAM can have multiple SAM sessions
		going at once (with different destinations)
	* Rewrote sendq functions to automatically send big packets, for better
		network performance (still considered experimental)

v1.20	2004-07-11
	* Ported to FreeBSD (Makefile.freebsd)
	* Full winsock compatibility - all Windows functions now return appropriate
		error strings

v1.15	2004-06-23
	* Added a new example program, warhammer-dgram (use with caution)
	* Fixed some fatal bugs in datagram handling
	* Added another error return type named SAM_TOO_BIG - some functions now
		return samerr_t instead of bool

v1.10	2004-06-16
	* Changed sam_strerror() to work the same as the standard library strerror()
	* Ported to native MS Windows (uses the Mingw development environment)
	* Fixed a probable bug in the Cygwin port

v1.05	2004-06-09
	* Added an example datagram client/server program in the examples directory
	* sam_read_buffer() now returns bool true if it read anything
	* Added repliable datagram support - sam_connect() now has another argument
	* Replaced strstr() with the more appropriate strncmp() in many places
	* Fixed a parsing error for STREAM CLOSED
	* Removed the old sam_naming_lookup() and renamed sam_naming_lookup_async()
		to sam_naming_lookup() to replace it
	* Fixed a bug in sam_stream_close() where a '\n' was not being sent after
		the SAM command
	* Fixed a bug where the stream ID was being improperly incremented in
		sam_stream_connect()